[package]
name = "red-editor"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
version = "0.2.1"
description = "A Rust Editor - red is a line-oriented text editor, based on the popular ed utility."
repository = "https://github.com/badboy/red"
homepage = "https://github.com/badboy/red"
license = "MIT"
readme = "README.md"

include = [
  "Cargo.toml",
  "README*",
  "LICENSE*",
  "src/**/*",
]

[dependencies]
env_logger = "0.5.13"
exitfailure = "0.5.1"
failure = "0.1.2"
log = "0.4.5"
regex = "1.0.5"
rustyline = "2.0.1"
structopt = "0.2.10"

[[bin]]
name = "red"
path = "src/main.rs"
