[package]
name = "red-editor"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
version = "0.2.1"
description = "A Rust Editor - red is a line-oriented text editor, based on the popular ed utility."
repository = "https://github.com/badboy/red"
homepage = "https://github.com/badboy/red"
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "Cargo.toml",
  "README*",
  "LICENSE*",
  "src/**/*",
]

[dependencies]
env_logger = "0.11.8"
exitfailure = "0.5.1"
failure = "0.1.8"
log = "0.4.27"
regex = "1.11.1"
rustyline = "15.0.0"
structopt = "0.3.26"

[[bin]]
name = "red"
path = "src/main.rs"
